Bug fix, IE8 nav central alignment
Aligns the navigation bar centrally over the content in IE8

--- a/less/src/navigation.less
+++ b/less/src/navigation.less
@@ -10,6 +10,8 @@
 
     .ie8 & {
         max-width: @ie8-max-width;
+        left: 0;
+        right: 0;
     }
 
     .icon {
